Fix major issues with the return functionality